# course_ocr

./: .gitignore  README.md
.github/workflows/: compute_task1_score.yaml  compute_task2_score.yaml  compute_task3_score.yaml
task1/: README.md  README_1.MD  baseline.ipynb  gt.json  my_model.ipynb  pred.json  pred1.json  pred_centernet.json  pred_hrnet.json  pyproject.toml  setup.py  task1.ipynb  task1centernet.ipynb  task1hrnet.ipynb
task1/.ipynb_checkpoints/: baseline-checkpoint.ipynb  task1-checkpoint.ipynb  task1centernet-checkpoint.ipynb  task1hrnet-checkpoint.ipynb
task1/abbyy_course_cvdl_t2/: backbone.py  convert.py  head.py  loss.py  network.py
task1/abbyy_course_cvdl_t2/impl/: data.py  train.py
task1/course_ocr_t1/: data.py  metrics.py
task1/task1pack/models/: argmax.py  centernet.py  hrnet.py  hrnet_config.py
task1/task1pack/utils/: data.py  train.py
task2/: Baseline.ipynb  README.md  data_reader.py  my_solution.ipynb  pyproject.toml  setup.py
task2/course_ocr_t2/: evaluate.py
task3/: README.md  README_1.MD  answer.csv  checkpoint_decoder_1_epoch_9.pth  markup.csv  my_model.ipynb  pyproject.toml  setup.py
task3/course_ocr_t3/: evaluate.py
